Fixed bird overflow

--- a/data/css/birds.css
+++ b/data/css/birds.css
@@ -1,3 +1,10 @@
+#bird_container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
 .bird {
     background-image: url(../img/bird-cells.svg);
     background-size: auto 100%;
