--- a/data/css/main.css
+++ b/data/css/main.css
@@ -17,7 +17,7 @@ html, body {
     background-color: var(--background-color);
     flex-direction: column;
     user-select: none;
-    overflow: hidden;
+
     overflow: hidden;
 }
 
